--- a/HSBC-TestProject/pom.xml
+++ b/HSBC-TestProject/pom.xml
@@ -23,7 +23,7 @@
 			<artifactId>tools</artifactId>
 			<version>1.8</version>
 			<scope>system</scope>
-			<systemPath>C:\Program Files\Java\jdk1.8.0_251\lib\tools.jar</systemPath>
+			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
@@ -107,8 +107,6 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.1</version>
 				</plugin>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -145,4 +143,8 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
